compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__qualified_to_unqualified_import_in_constant_record.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport option\n\nconst some = option.Some(1)\n"
---
----- BEFORE ACTION

import option

const some = option.Some(1)
                    ↑      


----- AFTER ACTION

import option.{Some}

const some = Some(1)
