compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__qualified_to_unqualified_import_when_unqualified_exists.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport option.{Some}\n\npub fn main() {\n  option.Some(1)\n}\n"
---
----- BEFORE ACTION

import option.{Some}

pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
}


----- AFTER ACTION

import option.{Some}

pub fn main() {
  Some(1)
}
