compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  echo 1 + 2\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo 1 + 2
  ↑         
}


----- AFTER ACTION
pub fn main() {
  1 + 2
}
